--- a/css/main.css
+++ b/css/main.css
@@ -88,11 +88,11 @@ section {
 
 .left-col .Watch-video-cta {
   display: block;
-  margin-top: 2em;
+  margin-top: 1em;
 }
 
 .left-col .Watch-video-cta img {
-  margin-right: 01.5em;
+  margin-right: 01.4em;
 }
 
 .hero-img {
@@ -206,16 +206,29 @@ nav.menu-btn {
 
 nav {
   position: fixed;
-  z-index: 999;
-  width: 66%;
+  z-index: 998;
+  width: 25%;
   right: 0;
   top: 0;
-  background: #20272E;
+  background: var(--primary-color);
   height: 100vh;
   padding: 1em;
 }
 
-nav ul.primary-nav {
+nav u1.primary-nav {
   margin-top: 5em;
+}
+
+nav li a {
+  color: black;
+  text-decoration: none;
+  display: block;
+  padding: .5em;
+  font-size: 1em;
+  text-align: left;
+}
+
+nav li ahover {
+  font-weight: bold;
 }
 /*# sourceMappingURL=main.css.map */
