--- a/css/main.scss
+++ b/css/main.scss
@@ -88,9 +88,9 @@ ul {
      }
      .Watch-video-cta {
         display: block;
-        margin-top: 2em;
+        margin-top: 1em;
         img{
-            margin-right: 01.5em;
+            margin-right: 01.4em;
         }
 
        
@@ -220,20 +220,37 @@ ul.Features-list {
 nav.menu-btn {
     display: block;
 }
-
-nav {
-    position: fixed;
-    z-index: 999;
-    width: 66%;
+nav{
+    position : fixed;
+    z-index: 998 ;
+    width: 25%;
     right: 0;
     top: 0;
-    background: #20272E;
+    background: var(--primary-color);
     height: 100vh;
     padding: 1em;
-
-    ul.primary-nav {
+    u1.primary-nav{
         margin-top: 5em;
+
     }
+    li{
+        a{
+            color: black;
+            text-decoration: none;
+            display: block;
+            padding :.5em;
+            font-size: 1em;
+            text-align: left;
+            &hover{
+                font-weight: bold;
+            }
+        }
+    }
+
+
+    
+
+    
 }
     
 
