--- a/css/main.css
+++ b/css/main.css
@@ -231,4 +231,111 @@ nav li a {
 nav li ahover {
   font-weight: bold;
 }
+
+.mobile-menu-exit {
+  float: left;
+  margin: .5em;
+  cursor: pointer;
+}
+
+.mobile-menu, .mobile-menu-exit {
+  display: none;
+}
+
+.navbar .container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 180px auto;
+      grid-template-columns: 180px auto;
+  -webkit-box-pack: unset;
+      -ms-flex-pack: unset;
+          justify-content: unset;
+}
+
+.navbar nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background: none;
+  position: unset;
+  height: auto;
+  width: 100%;
+  padding: 0;
+}
+
+.navbar nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navbar nav a {
+  color: black;
+  font-size: 1em;
+  padding: .1em 1em;
+}
+
+.navbar nav ul.primary-nav {
+  margin: 0;
+}
+
+.navbar nav li.current a {
+  font-weight: bold;
+}
+
+.navbar nav li.go-premium-cta a {
+  color: var(--primary-color);
+  border: 3px solid var(--primary-color);
+  font-weight: bold;
+  border-radius: 5em;
+  margin-top: -.2em;
+}
+
+.navbar nav li.go-premium-cta a:hover {
+  background: var(--primary-color);
+  color: white;
+}
+
+/*
+    @media only screen and (min-width: 768px){
+        .mobile-menu, .mobile-menu-exit{
+            display: none;    
+        }
+        .navbar .container{
+          display: grid;  
+          grid-template-columns: 180px auto;
+          //justify-content:unset ;
+        }
+        .navbar .nav {
+            display: flex;
+            justify-content: space-between;
+            background: none;
+            position: unset;
+            height: auto;
+            width: 100%;
+            padding: 0;
+            //rgba(170, 98, 80, 0.753);
+      ul{
+    display: flex;
+    }
+    a{
+      color: black;
+      font-size: 1em;
+      padding : .1em 1em;
+      //var(--primary-color);
+
+    }
+    ul.primary-nav{
+margin: 0;
+
+    }
+
+        }
+    }
+
+
+*/
 /*# sourceMappingURL=main.css.map */
