--- a/css/main.scss
+++ b/css/main.scss
@@ -33,7 +33,7 @@ body {
         display: none;
     }
     
-    .container {
+   .container {
         display: flex;
         place-content: space-between;
     }
@@ -245,14 +245,109 @@ nav{
                 font-weight: bold;
             }
         }
+    }   
+}
+   .mobile-menu-exit {
+float: left;
+margin: .5em;
+cursor: pointer;
+    }
+
+    @media only screen and (min-width: 800px) {
+
+        .mobile-menu, .mobile-menu-exit {
+            display: none;
+        }
+    
+        .navbar .container {
+            display: grid;
+            grid-template-columns: 180px auto;
+            justify-content: unset;
+           
+        }
+    
+        .navbar nav {
+            display: flex;
+            justify-content: space-between;
+            background: none;
+            position: unset;
+            height: auto;
+            width: 100%;
+            padding: 0;
+    
+            ul {
+                display: flex;
+            }
+    
+            a {
+                color: black;
+                font-size: 0.1em;
+                padding: .1em .1em;
+            }
+            
+            ul.primary-nav {
+                display: flex;
+                margin: 0;
+               display: center;
+            }
+            ul.secondary-nav {
+                margin: 0;
+            }
+    
+            li.current a {
+                font-weight: bold;
+            }
+            li.go-premium-cta a {
+                color: var(--primary-color);
+                border: 3px solid var(--primary-color);
+                font-weight: bold;
+                border-radius: 5em;
+                margin-top: -.2em;
+    
+                &:hover {
+                    background: var(--primary-color);
+                    color: white;
+                }
+            }
+        }
+    */
+
+    /*
+    @media only screen and (min-width: 768px){
+        .mobile-menu, .mobile-menu-exit{
+            display: none;    
+        }
+        .navbar .container{
+          display: grid;  
+          grid-template-columns: 180px auto;
+          //justify-content:unset ;
+        }
+        .navbar .nav {
+            display: flex;
+            justify-content: space-between;
+            background: none;
+            position: unset;
+            height: auto;
+            width: 100%;
+            padding: 0;
+            //rgba(170, 98, 80, 0.753);
+      ul{
+    display: flex;
+    }
+    a{
+      color: black;
+      font-size: 1em;
+      padding : .1em 1em;
+      //var(--primary-color);
+
+    }
+    ul.primary-nav{
+margin: 0;
+
+    }
+
+        }
     }
 
 
-    
-
-    
-}
-    
-
-
-
+*/
