--- a/css/main.scss
+++ b/css/main.scss
@@ -104,7 +104,6 @@ ul {
 section.Features-section{
 
     background:rgba(89, 96, 131, 0.438) ;
-   
     color: rgb(7, 7, 7);
    
 }
@@ -112,8 +111,9 @@ section.Features-section{
 
 ul.Features-list {
     margin: 0 ;
-    display: inline-block;
+    display: grid;
     padding-left: 0,1em;
+    //grid-template-columns:repeat(auto-fit,minmax 19em, iframe) ;
  
    
 
@@ -253,7 +253,7 @@ margin: .5em;
 cursor: pointer;
     }
 
-    @media only screen and (min-width: 800px) {
+    @media only screen and (min-width: 780px) {
 
         .mobile-menu, .mobile-menu-exit {
             display: none;
@@ -261,8 +261,8 @@ cursor: pointer;
     
         .navbar .container {
             display: grid;
-            grid-template-columns: 180px auto;
-            justify-content: unset;
+            grid-template-columns: 200px auto;
+            //justify-content: unset;
            
         }
     
@@ -280,18 +280,19 @@ cursor: pointer;
             }
     
             a {
+                
                 color: black;
-                font-size: 0.1em;
-                padding: .1em .1em;
+                font-size: 1em;
+                padding: .1em 1em;
             }
             
             ul.primary-nav {
                 display: flex;
-                margin: 0;
-               display: center;
+                margin: 0 ;
+              
             }
             ul.secondary-nav {
-                margin: 0;
+                margin: 0  ;
             }
     
             li.current a {
@@ -303,51 +304,40 @@ cursor: pointer;
                 font-weight: bold;
                 border-radius: 5em;
                 margin-top: -.2em;
+             
     
                 &:hover {
                     background: var(--primary-color);
-                    color: white;
+                    color: black;
+                    //color: white;
                 }
             }
         }
-    */
+    
+    }
+    @media only screen and (min-width: 1080px) {
+        .container{
+            width: 1080px;
+            margin: 0 auto;
+        }
+        section{
+            padding: 10em 4em;
 
-    /*
-    @media only screen and (min-width: 768px){
-        .mobile-menu, .mobile-menu-exit{
-            display: none;    
         }
-        .navbar .container{
-          display: grid;  
-          grid-template-columns: 180px auto;
-          //justify-content:unset ;
-        }
-        .navbar .nav {
+        .hero .container{
             display: flex;
             justify-content: space-between;
-            background: none;
-            position: unset;
-            height: auto;
-            width: 100%;
-            padding: 0;
-            //rgba(170, 98, 80, 0.753);
-      ul{
-    display: flex;
-    }
-    a{
-      color: black;
-      font-size: 1em;
-      padding : .1em 1em;
-      //var(--primary-color);
-
-    }
-    ul.primary-nav{
-margin: 0;
-
-    }
-
+            text-align: left;
+            .left-col{
+                margin: 3em 3em 0 4em;
+                
+                .h1{
+                    width: 90%;
+                    font-size: 3em;
+                }
+            }
         }
     }
 
 
-*/
+
