--- a/css/main.scss
+++ b/css/main.scss
@@ -91,9 +91,7 @@ ul {
         margin-top: 1em;
         img{
             margin-right: 0.5em;
-        }
-
-       
+        }  
     }
 }
 
@@ -107,8 +105,6 @@ section.Features-section{
     color: rgb(7, 7, 7);
    
 }
-
-
 ul.Features-list {
     margin: 0 ;
     display: grid;
@@ -175,10 +171,8 @@ ul.Features-list {
 
     .h2{
     font-size: .2em;
-    
         text-decoration: none;
         font-weight: bold;
-      
     }
         .span{
             color: rgba(170, 98, 80, 0.753);   
@@ -262,7 +256,7 @@ cursor: pointer;
         .navbar .container {
             display: grid;
             grid-template-columns: 200px auto;
-            //justify-content: unset;
+            justify-content: unset;
            
         }
     
@@ -336,8 +330,7 @@ cursor: pointer;
                 .h1{
                     width: 90%;
                     font-size: 3em;
-                }
-            
+                }  
         }
 
         .hero-img {
