--- a/css/main.scss
+++ b/css/main.scss
@@ -351,23 +351,5 @@ cursor: pointer;
             }
             */
         }
-    
-    
-         
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
+    }
+}
