--- a/css/main.css
+++ b/css/main.css
@@ -103,13 +103,16 @@ section {
 section.Features-section {
   background: rgba(89, 96, 131, 0.438);
   color: #070707;
+  background-size: 3em 25px;
 }
 
 ul.Features-list {
   margin: 0;
   display: -ms-grid;
   display: grid;
-  padding-left: 0,1em;
+  padding-left: 0.1em;
+  -ms-grid-columns: (minmax 19em, if)[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax 19em, if);
 }
 
 ul.Features-list li {
@@ -120,7 +123,6 @@ ul.Features-list li {
 }
 
 ul.Features-list li:before {
-  margin: 0.1em;
   content: '';
   left: -2em;
   position: absolute;
@@ -158,23 +160,23 @@ ul.Features-list li:before {
   margin-top: -4.5em;
 }
 
-.contact-section .h2 {
+.h2 {
   font-size: .2em;
   text-decoration: none;
   font-weight: bold;
 }
 
-.contact-section .span {
+.h2 .span {
   color: rgba(170, 98, 80, 0.753);
 }
 
-.contact-section label {
+label {
   display: block;
   font-size: 1.2em;
   margin-bottom: .5em;
 }
 
-.contact-section input, .contact-section textarea {
+input, textarea {
   width: 100%;
   padding: .3em;
   margin-bottom: 1em;
@@ -184,7 +186,7 @@ ul.Features-list li:before {
           box-sizing: border-box;
 }
 
-.contact-section input[type="submit"] {
+input[type="submit"] {
   background-color: var(--primary-color);
   color: black;
   font-size: 1.3em;
@@ -196,7 +198,7 @@ ul.Features-list li:before {
   padding: .5em .2em;
 }
 
-.contact-section iframe {
+iframe {
   width: 100%;
   height: 400px;
 }
@@ -237,99 +239,5 @@ nav li ahover {
   float: left;
   margin: .5em;
   cursor: pointer;
-}
-
-@media only screen and (min-width: 780px) {
-  .mobile-menu, .mobile-menu-exit {
-    display: none;
-  }
-  .navbar .container {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 200px auto;
-        grid-template-columns: 200px auto;
-  }
-  .navbar nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    background: none;
-    position: unset;
-    height: auto;
-    width: 100%;
-    padding: 0;
-  }
-  .navbar nav ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .navbar nav a {
-    color: black;
-    font-size: 1em;
-    padding: .1em 1em;
-  }
-  .navbar nav ul.primary-nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0;
-  }
-  .navbar nav ul.secondary-nav {
-    margin: 0;
-  }
-  .navbar nav li.current a {
-    font-weight: bold;
-  }
-  .navbar nav li.go-premium-cta a {
-    color: var(--primary-color);
-    border: 3px solid var(--primary-color);
-    font-weight: bold;
-    border-radius: 5em;
-    margin-top: -.2em;
-  }
-  .navbar nav li.go-premium-cta a:hover {
-    background: var(--primary-color);
-    color: black;
-  }
-}
-
-@media only screen and (min-width: 1080px) {
-  .container {
-    width: 1080px;
-    margin: 0 auto;
-  }
-  section {
-    padding: 10em 4em;
-  }
-  .hero .Container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    text-align: left;
-  }
-  .hero .Container .left-col {
-    margin: 3em 3em 0 5em;
-    display: block;
-  }
-  .hero .Container .h1 {
-    width: 90%;
-    font-size: 3em;
-  }
-  .hero-img {
-    width: 30%;
-    margin-right: 8em;
-  }
-  .hero-cta {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
 }
 /*# sourceMappingURL=main.css.map */
