--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,6 @@
 }
 span{
 color: rgba(170, 98, 80, 0.753);
-
 }
 body {
     background: honeydew;
@@ -18,63 +17,73 @@ body {
     background: rgb(236, 227, 227);
     padding: 1em;
 
-    .logo {
+    .logo 
+    {
         text-decoration: none;
         font-weight: bold;
         color: black;
         font-size: 2em;
-        span {
+        span 
+        {
             color: var(--primary-color);
         }
     }
 
-    nav {
+    nav 
+    {
         display: none;
     }
     
-   .container {
+   .container 
+   {
         display: flex;
         place-content: space-between;
     }
-
-    .mobile-menu {
+    .mobile-menu 
+    {
         cursor: pointer;
     }
 }
 
-a {
+a 
+  {
     color: #444444;
-}
-ul {
+  }
+ul 
+{
     list-style-type: none; 
     margin: 0;
     padding: 0;
  }
- 
- section {
+ section 
+ {
      padding: 5em 3em;
  }
  
- .hero {
+ .hero 
+ {
      text-align: center;
  }
  
-.left-col {
- 
-     .subhead {
+.left-col 
+{
+     .subhead 
+     {
          text-transform: uppercase;
          font-weight: bold;
          color: gray;
          letter-spacing: .1em;
      }
  
-     .h1 {
+     .h1 
+     {
          font-size: 20em;
          line-height: 1.3em;
          margin-top: .2em;
      }
  
-     .primary-cta {
+     .primary-cta 
+     {
          background: var(--primary-color);
          color:black;
          text-decoration: none;
@@ -84,38 +93,44 @@ ul {
          font-weight: bold;
          display: inline-block;
      }
-     .Watch-video-cta {
+     .Watch-video-cta 
+     {
         display: block;
         margin-top: 1em;
-        img{
+        img
+        {
             margin-right: 0.5em;
-           }  
-        }
+        }  
+     }
 }
 
-.hero-img {
+.hero-img 
+{
     width: 70%;
     margin-top: 3em;
 }
-section.Features-section{
-
+section.Features-section
+{
     background:rgba(89, 96, 131, 0.438) ;
     color: rgb(7, 7, 7);
     background-size: 3em 25px;
    
 }
-ul.Features-list {
+ul.Features-list 
+{
     margin: 0 ;
     display: grid;
     padding-left: 0.1em;
     grid-template-columns:repeat(auto-fit,minmax (19em, if)) ;
 
-    li {
+    li 
+    {
         font-size: 1.1em;
         margin-bottom: 1em;
         margin-left: 2em;
         position: relative;
-         &:before {
+         &:before 
+         {
             // margin: 0.1em;
             content: '';
             left: -2em;
@@ -129,14 +144,17 @@ ul.Features-list {
         
     }   
 }
-.Features-section img {
+.Features-section img 
+{
     display: none;
 }
 
-.our-stylist {
+.our-stylist 
+{
     background: var(--primary-color);
     color:black;
-    li{
+    li
+    {
         background:rgb(228, 216, 200) ;
         text-align: center;
         padding:2em 4em;  
@@ -145,7 +163,8 @@ ul.Features-list {
         //width: 80%;
         margin: 0 auto 5em auto;
         border-radius: 1em;
-        img{
+        img
+        {
             width: 5em;
             height: 5em;
             background-color: '';
@@ -157,23 +176,25 @@ ul.Features-list {
         }
     }
 }
-.contact-section{
-    .h2{
+
+    .h2
+    {
     font-size: .2em;
         text-decoration: none;
         font-weight: bold;
     
-        .span{
+        .span
+        {
             color: rgba(170, 98, 80, 0.753);   
-       }
-    }
-    
+        }
+    } 
 label{
         display: block;
         font-size: 1.2em;
         margin-bottom: .5em;
     }
-input,textarea{
+input,textarea
+   {
         width: 100%;
         padding: .3em;
         margin-bottom: 1em;
@@ -181,7 +202,8 @@ input,textarea{
         border: 1px solid gray;
         box-sizing: border-box;
      }
-input[type="submit"]{
+input[type="submit"]
+   {
         background-color: var(--primary-color);
         color: black;
         font-size:  1.3em;
@@ -194,14 +216,18 @@ input[type="submit"]{
         //width: unset;
         //cursor: pointer;
     }
-iframe {
+iframe 
+    {
         width: 100%;
         height: 400px
     }
-nav.menu-btn {
+nav.menu-btn 
+{
     display: block;
 }
-nav{
+
+nav
+{
     position : fixed;
     z-index: 998 ;
     width: 25%;
@@ -210,7 +236,8 @@ nav{
     background: var(--primary-color);
     height: 100vh;
     padding: 1em;
-    u1.primary-nav{
+    u1.primary-nav
+    {
         margin-top: 5em;
     }
     li{
@@ -227,107 +254,11 @@ nav{
         }
     }   
 }
-.mobile-menu-exit {
-float: left;
-margin: .5em;
-cursor: pointer;
-    }
-    //@media only screen and (min-width: 780px) {
-@media only screen and (min-width: 780px) {
-
-    .mobile-menu, .mobile-menu-exit {
-            display: none;
-        }
-    
-    .navbar .container {
-            display: grid;
-            grid-template-columns: 200px auto;
-            justify-content: unset;  
-        }
-    
-    .navbar nav {
-            display: flex;
-            justify-content: space-between;
-            background: none;
-            position: unset;
-            height: auto;
-            width: 100%;
-            padding: 0;
-    
-            ul {
-                display: flex;
-            }
-    
-            a {
-                
-                color: black;
-                font-size: 1em;
-                padding: .1em 1em;
-            }
-            
-            ul.primary-nav {
-                display: flex;
-                margin: 0 ;
-              
-            }
-            ul.secondary-nav {
-                margin: 0  ;
-            }
-    
-            li.current a {
-                font-weight: bold;
-            }
-            li.go-premium-cta a {
-                color: var(--primary-color);
-                border: 3px solid var(--primary-color);
-                font-weight: bold;
-                border-radius: 5em;
-                margin-top: -.2em;
-             
-    
-                &:hover {
-                    background: var(--primary-color);
-                    color: black;
-                }
-            }
-        }
-    
+.mobile-menu-exit 
+{
+    float: left;
+    margin: .5em;
+    cursor: pointer;
 }
- @media only screen and (min-width: 1080px) {
-        .container {
-            width: 1080px;
-            margin: 0 auto;
-        }
-         section {
-            padding: 10em 4em;
-        }
-        .hero {
-            display: grid ;
-            //display: flex;
-            justify-content: space-between;
-
-            text-align: left;
-    
-             .left-col{
-                
-                margin: 3em 3em 0 5em;
-                text-align: left;
-                .h1{
-                    font-size: 3em;
-                    width: 90%;
-                }
-                
-            }
-        }
-        .hero-img{
-            width: 30%;
-            margin-right: 8em;    
-        }
-        .hero-cta{
-            display: flex;
-        }
 
 
-    }
-
-}
